syntax = "proto3";

package Movie;
option go_package = "./";
service Movie {
  rpc List(ListRequest)returns(ListResponse);
  rpc Detail(DetailRequest) returns(DetailMovie);
}

message DetailRequest{
  string imdb_id =1;
}

message ListRequest {
  int32 page =1;
  string search = 2;
}

message data{
  string Title = 1;
  string Year = 2;
  string imdbID = 3;
  string Type = 4;
  string Poster = 5;
}

message ListResponse {
  repeated  data data =1;
  Pagination pagination = 2;
}

message Pagination {
  int32 page_size = 1;
  int32 current_page = 2;
  int32 total_page = 3;
  int32 total_result = 4;
}

message Ratings {
  string Source = 1;
  string Value = 2;
}

message DetailMovie{
  string Title = 1;
  string Year = 2;
  string Rated = 3;
  string Released = 4;
  string Runtime = 5;
  string Genre = 6;
  string Director = 7;
  string Writer = 8;
  string Actors = 9;
  string Plot = 10;
  string Language = 11;
  string Country = 12;
  string Awards = 13;
  string Poster = 14;
  repeated Ratings Ratings = 15;
  string Metascore = 16;
  string imdbRating = 17;
  string imdbVotes = 18;
  string imdbID = 19;
  string Type = 20;
  string DVD = 21;
  string BoxOffice = 22;
  string Production = 23;
  string Website = 24;
  string Response = 25;
}